build : 블로그 설정/빌드 관련 수정
블로그 설정/빌드 및 css 수정

--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -2,6 +2,14 @@
 layout: archive
 ---
 
+{% if page.tags %}
+  {% for tag in page.tags %}
+    {% if site.data.tags contains tag %}
+      <span class="tag">{{ site.data.format[tag] }}</span>
+    {% endif %}
+  {% endfor %}
+{% endif %}
+
 {{ content }}
 
 <ul class="taxonomy__index">
