--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -14,14 +14,16 @@ $(function () {
 });
 
 function filterByTagName(tagName) {
-  $('.hidden').removeClass('hidden');
+  $('.tag-hidden').removeClass('tag-hidden');
+  $('.tag-selected').removeClass('tag-selected');
+
   $('.post-wrapper').each((index, elem) => {
     if (!elem.hasAttribute(`data-${tagName}`)) {
-      $(elem).addClass('hidden');
+      $(elem).addClass('tag-hidden');
     }
   });
-  $(`.tag`).removeClass('selected');
-  $(`.tag[data-tag="${tagName}"]`).addClass('selected');
+
+  $(`[data-tag="${tagName}"]`).addClass('tag-selected');
 }
 </script>
 
@@ -68,14 +70,7 @@ function filterByTagName(tagName) {
         <a href="{{ post.url | relative_url }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h2>
-    <p class="archive__item page__meta">
-      <i class="fa fa-fw fa-tags"></i>
-      {% for tag in post.tags %}
-        <span data-tag="{{tag}}">
-          [ {{ tag }} ] 
-        </span>
-      {% endfor %}
-    </p>
+    {% include page__tag.html type=include.type %}
     {% include page__meta.html type=include.type %}
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
   </article>
