--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -57,6 +57,7 @@ layout: default
       {% include post_pagination.html %}
     </div>
 
+    {{ jekyll.environment }}
     {% if jekyll.environment == 'production' and site.comments.provider and page.comments %}
       {% include comments.html %}
     {% endif %}
