--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -2,7 +2,7 @@
 layout: archive
 ---
 
-{{ content }}
+{{ content | toc }}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript">
