--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,3 +13,19 @@
     font-weight: normal;
     font-style: normal;
 }
+
+html {
+  font-size: 12px;
+
+  @include breakpoint($medium) {
+    font-size: 14px;
+  }
+
+  @include breakpoint($large) {
+    font-size: 16px;
+  }
+
+  @include breakpoint($x-large) {
+    font-size: 18px;
+  }
+}
